# Learned_BloomFilter

./: .gitignore  EXECUTION_SUMMARY.md  FINAL_FINAL_RESULTS.ipynb  FINAL_REPORT.md  Learned_BloomFilter_Results.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  t.txt  test_cpp_module.py
configs/: experiment.yaml
cpp/: CMakeLists.txt
cpp/include/: bloom_filter.hpp  fused_trigram_scorer.hpp
cpp/src/: bloom_filter.cpp  fused_trigram_scorer.cpp  pybind_module.cpp
docs/: architecture.md  experiment_plan.md
results/: dsum.py  dum.py
results/fused_cpp_benchmark/: summary.json
results/fused_model/: metadata.json  summary.json
results/fused_python_benchmark/: summary.json
results/hash_benchmark/: step_01_word_tokens.json  step_02_char_trigrams.json  summary.json
results/learned_bloom_filter/: summary.json
results/learned_vs_standard_benchmark/: summary.json
results/memory_usage_variants/: summary.json
results/threshold_tradeoff/: summary.json
scripts/: benchmark.py  benchmark_fused_cpp.py  benchmark_learned_vs_standard.py  benchmark_memory_variants.py  benchmark_threshold_tradeoff.py  build_false_negative_filter.py  plot_hash_benchmark.py  plot_learned_vs_standard.py  plot_memory_reduction_heatmap.py  plot_memory_variants.py  plot_step_comparison.py  plot_threshold_tradeoff.py  preprocess_urls.py  train_model.ipynb  train_model.py
src/python/learned_bloom/: __init__.py  bloom_filter.py  features.py  fused_scorer_py.py  metrics.py  (+3 more)
tests/: conftest.py  test_bloom.py  test_cpp_module.py  test_learned_filter.py  test_python_bloom_filter.py
